Updates from Overleaf

--- a/felknerresume.tex
+++ b/felknerresume.tex
@@ -125,7 +125,7 @@
       {University of Southern California}{Los Angeles, CA}
       {Ph.D. in Computer Science}{Aug. 2020 -- Present}
       \resumeItemListStart
-        \resumeItem{Expected Spring 2027; GPA: 3.88/4.00; Supported by \textbf{NSF Graduate Research Fellowship}}
+        \resumeItem{Expected May 2027; GPA: 3.88/4.00; Supported by \textbf{NSF Graduate Research Fellowship}}
       \resumeItem{Selected Coursework: Adv. NLP, Fairness in AI, Probability for Data Sci., Representation Learning in NLP}
       \resumeItemListEnd
       
