add new NLI paper

--- a/felknerresume.tex
+++ b/felknerresume.tex
@@ -155,7 +155,7 @@
       \resumeItem{Lead team of 3 to collect 8M sentences of community data, then train 32 debiased models via continued pretraining.}
       \resumeItem{Assess LLM capability for  fairness benchmark construction and conduct detailed human analysis of model failures.}
       \resumeItemWithHeader{Mentoring}{Mentor undergrad on project analyzing behavior of textual entailment (NLI) as an LLM bias metric.}
-      \resumeItemWithHeader{Publications}{Lead interdisciplinary teams of coauthors to write and publish two papers in ACL (2023, 2024).}
+      \resumeItemWithHeader{Publications}{Lead interdisciplinary teams to publish four papers (two ACL, one workshop, one under review).}
       \resumeItemListEnd
 
     \resumeSubheading
