--- a/my_selected_pubs_formatted.bib
+++ b/my_selected_pubs_formatted.bib
@@ -24,16 +24,16 @@
     doi = "10.18653/v1/2024.acl-long.760",
 }
 
-@inproceedings{felkner2022winoqueerdevelopingbenchmarkantiqueer,
-      title={Towards WinoQueer: Developing a Benchmark for Anti-Queer Bias in Large Language Models}, 
-      author={Virginia K. Felkner and Ho-Chun Herbert Chang and Eugene Jang and Jonathan May},
+@misc{felkner2025textualentailmenttokenprobability,
+      title={Textual Entailment and Token Probability as Bias Evaluation Metrics}, 
+      author={Virginia K. Felkner and Allison Lim and Jonathan May},
     author+an = {1=highlight},
-    month = jul,
-      year={2022},
-    booktitle = {QueerInAI Affinity Group Workshop},
-    series = {NAACL 2022},
-      eprint={2206.11484},
+    month = oct,      
+    year={2025},
+      eprint={2510.07662},
       archivePrefix={arXiv},
       primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2206.11484}, 
+      url={https://arxiv.org/abs/2510.07662}, 
+      note={Under review}
+
 }
